@@ -17,7 +17,6 @@
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
 from builtins import filter
-from future.builtins import filter
 
 import os
 import re
