@@ -1,8 +1,8 @@
 from __future__ import print_function
 from future import standard_library
 standard_library.install_aliases()
-from future.builtins import filter
-from future.builtins import map
-from future.builtins import next
-from future.builtins import object
-from future.builtins import range
+from builtins import filter
+from builtins import map
+from builtins import next
+from builtins import object
+from builtins import range
