@@ -22,7 +22,7 @@
 from __future__ import print_function
 from future import standard_library
 standard_library.install_aliases()
-from future.builtins import map
+from builtins import map
 
 import io
 import unittest
