@@ -37,6 +37,9 @@ New in v0.8.01 (2019/0?/??)
     * Set docker locale as UTF-8
 * Merged in lp:~mterry/duplicity/s3fsdecode
   - Fix s3 backups by encoding remote filenames
+* Fix reimport problem where "from future.builtins" was being treated
+  the differently than "from builtins".  They are both the same, so
+  converted to shorter form "from builtins" and removed duplicates.
 
 
 New in v0.8.00 (2019/05/29)
